# userStory4

./: .cursorignore  Display_Login_Form_steps_generated_ambig.py  debug_enhance_env.py  environment_correct.py  locators_babel_correct.json
agentic_testing/: README.md  package-lock.json  package.json  pyproject.toml
agentic_testing/src/agentic_testing/: crew.py  main.py
agentic_testing/src/agentic_testing/config/: agents.yaml  tasks.yaml
agentic_testing/src/agentic_testing/tools/: build_tool.py  directory_search_tool.py  environment_base_generator.py  extract_all_metadata_babel.js  extract_java_endpoints.js  git_clone_tool.py  jira_fetch_tool.py  message_extraction_tool.py
features/: Display_Login_Form.feature  Display_User_Dashboard_After_Login.feature  Implement_Logout_Functionality.feature  Login_Submission.feature  Manage_Session_or_Token_Authentication.feature  Validate_User_Credentials_via_API.feature  environment.py
features/meta_data/: endpoints_babel.json  extracted_messages.json  locators_babel.json  ui_endpoints_babel.json
features/reports/: behave_report.json
features/steps/: Display_Login_Form_steps.py  Display_User_Dashboard_After_Login_steps.py
tests/: Display_Login_Form_test.py
user_stories/: LD-2_story.txt  LD-4_story.txt  LD-5_story.txt  LD-6_story.txt  LD-7_story.txt  LD-8_story.txt
