[project]
name = "agentic_testing"
version = "0.1.0"
description = "agentic_testing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "gitpython>=3.1.44",
    "responses>=0.25.7",
]

[project.scripts]
agentic_testing = "agentic_testing.main:run"
run_crew = "agentic_testing.main:run"
train = "agentic_testing.main:train"
replay = "agentic_testing.main:replay"
test = "agentic_testing.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
